--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <center>
 	<br/><br/>
 	<div class="Sunflower col-md-3">
-<img src="https://static.wikia.nocookie.net/plantsvszombies/images/d/d2/Sunflower2009HD.png/revision/latest?cb=20240401195717" class="mx-auto img-fluid dd-block" width="100">
+<img src="images/Sunflower.WEBP" class="mx-auto img-fluid dd-block" width="100">
 	<br/><br/>
 	<p>"Welcome to my garden! i will help you solve math problems."</p>
 	</div>
 	<form class="form mt-5">
 			
-			<img src="https://static.wikia.nocookie.net/plantsvszombies/images/b/b8/Sun_PvZ2.png/revision/latest/smart/width/250/height/250?cb=20160323031552" width="50"><h2>Give two values!</h2>
+			<img src="images/Sun_PvZ2.WEBP" width="50"><h2>Give two values!</h2>
 		<label>a:</label>
 		<br/>
 		<input type="text" id="a-value" name="a">
