--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <center>
 	<br/><br/>
 	<div class="Sunflower col-md-3">
-<img src="images/Sunflower.WEBP" class="mx-auto img-fluid dd-block" width="100">
+<img src="images/Sunflower.webp" class="mx-auto img-fluid dd-block" width="100">
 	<br/><br/>
 	<p>"Welcome to my garden! i will help you solve math problems."</p>
 	</div>
 	<form class="form mt-5">
 			
-			<img src="images/Sun_PvZ2.WEBP" width="50"><h2>Give two values!</h2>
+			<img src="images/Sun_PvZ2.webp" width="50"><h2>Give two values!</h2>
 		<label>a:</label>
 		<br/>
 		<input type="text" id="a-value" name="a">
